image spacing fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -97,9 +97,10 @@ footer {
 }
 
 section#contact p a img {
-    width: 25px; 
-    height: 25px;
+    width: 50px; 
+    height: 50px;
     margin-right: 8px;
+    vertical-align: middle;
 }
 
 section#contact p a {
